--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
+<html>
 <head>
-    <h1>FSD LAb 2</h1>
-    <body>
-        
-    </body>
+    <title>try it yourself</title>
 </head>
+<body>
+    <h1>
+        fsd lab 2 html bootcamps
+    </h1>
+    <p>
+        this is paragraph 
+    </p>
+</body>
+</html>
