--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>try it yourself</title>
+    <title>MIT WPU </title>
+    <link rel="icon" type="image/jpg" href="icon.jpg">
 </head>
-<body>
-    <h1>
-        fsd lab 2 html bootcamps
-    </h1>
-    <p>
-        this is paragraph 
-    </p>
+<body style="background-color:powderblue;">
+    <h2 style="color:brown"><i>VASUNDHARA</i></h2>
+        <p style="color: darkgoldenrod">Traditional Day</p>
+   
+    <img src="aarul1.jpg" width="400" height="500">
 </body>
 </html>
