--- a/index.html
+++ b/index.html
@@ -3,11 +3,67 @@
 <head>
     <title>MIT WPU </title>
     <link rel="icon" type="image/jpg" href="icon.jpg">
+    <style>
+        table, th, td {
+          border: 1px solid black;
+          border-collapse: collapse;
+        }
+        th, td {
+          padding: 15px;
+        }
+        tr:nth-child(even){
+            background-color: darkorange;
+        }
+        #grad {
+        background-image: linear-gradient(rgb(227, 97, 222), rgb(230, 227, 76));
+      }
+    </style>
 </head>
-<body style="background-color:powderblue;">
-    <h2 style="color:brown"><i>VASUNDHARA</i></h2>
-        <p style="color: darkgoldenrod">Traditional Day</p>
-   
-    <img src="aarul1.jpg" width="400" height="500">
+<body id="grad">
+    
+    <h1 style="color:rgb(38, 229, 194)"><i>VASUNDHARA</i></h1>
+        <p style="color: rgb(39, 6, 223);font-size :35px;">Traditional Day</p>
+          <img src="aarul1.jpg" width="400" height="500">
+    
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>City</th>
+            <th>Contact</th>
+        </tr>
+        <tr>
+            <td>Sid</td>
+            <td>kolhapur</td>
+            <td>instagram</td>
+        </tr>
+        <tr>
+            <td>Mohit</td>
+            <td>Nagpur</td>
+            <td>Facebook</td>
+        </tr>
+        <tr>
+            <td>Aarul</td>
+            <td>Pune</td>
+            <td>snapchat</td>
+        </tr>
+    </table>
+
+
+    <h3 style="color: deeppink;"> It was an amazing day </h3>
+    <p># ACM</p>
+    <img src="acm.jpg" width="400" height="500">
+
+    <ul>
+        <li>Head -- Ruthvik Bro</li>
+        <li>Vice head -- Kartik</li>
+        <li>Mentor -- Deepali mam</li>
+    </ul>
+
+    <ol>
+        <li>Core member<br></li>
+        <li>Raghu bro</li>
+        <li>soni</li>
+    </ol>
+
 </body>
 </html>
