--- a/sub1.html
+++ b/sub1.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="icon" type="image.jpg" href="C:\Users\91902\Desktop\webdev\icon.jpg">
     <title>My Bootstrap Webpage</title>
     <style>
-        /* Add your custom CSS styles here */
         .carousel-inner img {
             width: 100%;
             height: 500px; /* Increased height for the carousel */
         }
 
         .carousel {
-            width: 100%; /* Set carousel width to 100% */
+            width: 200%; /* Set carousel width to 100% */
         }
 
         .card {
@@ -45,6 +45,12 @@
             display: flex;
             flex-wrap: nowrap;
             overflow-x: auto;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            text-align: left;
+            background-color: #f0f0f0;
         }
     </style>
 </head>
@@ -78,6 +84,22 @@
         </form>
     </div>
 </nav>
+<button id="showDateTimeButton">Show Date and Time</button>
+    <p id="dateTimeDisplay"></p>
+    <script>
+        document.getElementById("showDateTimeButton").addEventListener("click", function() {
+            var dateTimeDisplay = document.getElementById("dateTimeDisplay");
+            var currentDateTime = new Date();
+            
+            // Display the date and time
+            dateTimeDisplay.innerHTML = "Current Date and Time: " + currentDateTime.toLocaleString();
+            
+            // Hide the display after 3 seconds
+            setTimeout(function() {
+                dateTimeDisplay.innerHTML = "";
+            }, 3000);
+        });
+    </script>
 
 <div class="container mt-4">
     <div class="row">
@@ -116,8 +138,8 @@
                     <input type="text" class="form-control" id="name" placeholder="Enter your name">
                 </div>
                 <div class="form-group">
-                    <label for="idNumber">ID Number</label>
-                    <input type="text" class="form-control" id="idNumber" placeholder="Enter your ID number">
+                    <label for="idNumber">Phone Number</label>
+                    <input type="number" class="form-control" id="phoneNumber" placeholder="Enter your phone Number">
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
@@ -134,24 +156,24 @@
                     <img src="C:\Users\91902\Desktop\webdev\image4.jpg" class="card-img-top" alt="Card Image">
                     <div class="card-body">
                         <h5 class="card-title">Card 1</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Learn More</a>
+                        <p class="card-text">Selaginella bryopteris L. (family: Selaginaceae), is often used in traditional Indian systems of medicine for the prevention and cure of several disorders</p>
+                        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5532467/" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
                 <div class="card">
                     <img src="C:\Users\91902\Desktop\webdev\image4.jpg" class="card-img-top" alt="Card Image">
                     <div class="card-body">
                         <h5 class="card-title">Card 2</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Learn More</a>
+                        <p class="card-text"> It is also used as a strength tonic. This study aimed to evaluate the mechanisms underlying the anti-inflammatory effects of topically administered aqueous, polar and non-polar methanolic fractions (10 mg/20 μL) of Selaginella bryopteris</p>
+                        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5532467/" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
                 <div class="card">
                     <img src="C:\Users\91902\Desktop\webdev\image4.jpg" class="card-img-top" alt="Card Image">
                     <div class="card-body">
                         <h5 class="card-title">Card 3</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Learn More</a>
+                        <p class="card-text">An acute oral toxicity study of Selaginella bryopteris at doses from 250 to 2,000 mg/kg body weight (bw) was performed. </p>
+                        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5532467/" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
             </div>
