--- a/sub1.html
+++ b/sub1.html
@@ -1,92 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="icon" type="image.jpg" href="C:\Users\91902\Desktop\webdev\icon.jpg">
-    <title>My Bootstrap Webpage</title>
-    <style>
-        .carousel-inner img {
-            width: 100%;
-            height: 500px; /* Increased height for the carousel */
-        }
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+            rel="stylesheet">
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+        <link rel="icon" type="image.jpg"
+            href="C:\Users\91902\Desktop\webdev\icon.jpg">
+        <title>My Bootstrap Webpage</title>
+        <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
+    </head>
+    <body>
 
-        .carousel {
-            width: 200%; /* Set carousel width to 100% */
-        }
-
-        .card {
-            width: 22rem; /* Increased card width */
-            margin: 10px;
-        }
-
-        .search-container {
-            float: right;
-        }
-
-        .search-container input[type="text"] {
-            padding: 10px;
-            width: 200px;
-            border: none;
-            font-size: 16px;
-        }
-
-        .search-container button {
-            padding: 10px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-
-        .queue-cards {
-            display: flex;
-            flex-wrap: nowrap;
-            overflow-x: auto;
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            text-align: left;
-            background-color: #f0f0f0;
-        }
-    </style>
-</head>
-<body>
-
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">My Website</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-            </li>
-        </ul>
-    </div>
-    <div class="search-container">
-        <form class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
-        </form>
-    </div>
-</nav>
-<button id="showDateTimeButton">Show Date and Time</button>
-    <p id="dateTimeDisplay"></p>
-    <script>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">My Website</a>
+            <button class="navbar-toggler" type="button"
+                data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="search-container">
+                <form class="form-inline">
+                    <div
+                        class="search-container d-flex justify-content-center align-items-center ">
+                    <input class="form-control mr-2" type="search"
+                        placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-light ml-2" type="submit">Search</button>
+                </div>
+                </form>
+            </div>
+        </nav>
+        <button id="showDateTimeButton">Show Date and Time</button>
+        <p id="dateTimeDisplay"></p>
+        <script>
         document.getElementById("showDateTimeButton").addEventListener("click", function() {
             var dateTimeDisplay = document.getElementById("dateTimeDisplay");
             var currentDateTime = new Date();
@@ -101,85 +68,135 @@
         });
     </script>
 
-<div class="container mt-4">
-    <div class="row">
-        <div class="col-md-6">
-            <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="C:\Users\91902\Desktop\webdev\image1.jpeg" alt="Image 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="C:\Users\91902\Desktop\webdev\image2.jpg" alt="Image 2">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="C:\Users\91902\Desktop\webdev\image3.jpg" alt="Image 3">
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#myCarousel" role="button" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#myCarousel" role="button" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </a>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="container mt-4">
-    <div class="row">
-        <div class="col-md-6">
-            <form>
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" class="form-control" id="name" placeholder="Enter your name">
-                </div>
-                <div class="form-group">
-                    <label for="idNumber">Phone Number</label>
-                    <input type="number" class="form-control" id="phoneNumber" placeholder="Enter your phone Number">
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-        </div>
-    </div>
-</div>
-
-<div class="container mt-4">
-    <div class="row">
-        <div class="col-md-12">
-            <h3>Queue Cards</h3>
-            <div class="queue-cards">
-                <div class="card">
-                    <img src="C:\Users\91902\Desktop\webdev\image4.jpg" class="card-img-top" alt="Card Image">
-                    <div class="card-body">
-                        <h5 class="card-title">Card 1</h5>
-                        <p class="card-text">Selaginella bryopteris L. (family: Selaginaceae), is often used in traditional Indian systems of medicine for the prevention and cure of several disorders</p>
-                        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5532467/" class="btn btn-primary">Learn More</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="C:\Users\91902\Desktop\webdev\image4.jpg" class="card-img-top" alt="Card Image">
-                    <div class="card-body">
-                        <h5 class="card-title">Card 2</h5>
-                        <p class="card-text"> It is also used as a strength tonic. This study aimed to evaluate the mechanisms underlying the anti-inflammatory effects of topically administered aqueous, polar and non-polar methanolic fractions (10 mg/20 μL) of Selaginella bryopteris</p>
-                        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5532467/" class="btn btn-primary">Learn More</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="C:\Users\91902\Desktop\webdev\image4.jpg" class="card-img-top" alt="Card Image">
-                    <div class="card-body">
-                        <h5 class="card-title">Card 3</h5>
-                        <p class="card-text">An acute oral toxicity study of Selaginella bryopteris at doses from 250 to 2,000 mg/kg body weight (bw) was performed. </p>
-                        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5532467/" class="btn btn-primary">Learn More</a>
+        <div class="container mt-4">
+            <div class="row">
+                <div class="col-md-6">
+                    <div id="myCarousel" class="carousel slide"
+                        data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img
+                                    src="image1.jpeg"
+                                    alt="Image 1">
+                            </div>
+                            <div class="carousel-item">
+                                <img
+                                    src="image2.jpg"
+                                    alt="Image 2">
+                            </div>
+                            <div class="carousel-item">
+                                <img
+                                    src="image3.jpg"
+                                    alt="Image 3">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#myCarousel"
+                            role="button" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon"
+                                aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#myCarousel"
+                            role="button" data-bs-slide="next">
+                            <span class="carousel-control-next-icon"
+                                aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>
 
-</body>
+        
+
+        <div class="container mt-4">
+            <div class="row">
+                <div class="col-md-12">
+                    <h3>Queue Cards</h3>
+                    <div class="queue-cards">
+                        <div class="card">
+                            <img src="image4.jpg"
+                                class="card-img-top" alt="Card Image">
+                            <div class="card-body">
+                                <h5 class="card-title">Card 1</h5>
+                                <p class="card-text">Selaginella bryopteris L.
+                                    (family: Selaginaceae), is often used in
+                                    traditional Indian systems of medicine for
+                                    the prevention and cure of several disorders</p>
+                                <a
+                                    href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5532467/"
+                                    class="btn btn-primary">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="image4.jpg"
+                                class="card-img-top" alt="Card Image">
+                            <div class="card-body">
+                                <h5 class="card-title">Card 2</h5>
+                                <p class="card-text"> It is also used as a
+                                    strength tonic. This study aimed to evaluate
+                                    the mechanisms underlying the
+                                    anti-inflammatory effects of topically
+                                    administered aqueous, polar and non-polar
+                                    methanolic fractions (10 mg/20 μL) of
+                                    Selaginella bryopteris</p>
+                                <a
+                                    href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5532467/"
+                                    class="btn btn-primary">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="image4.jpg"
+                                class="card-img-top" alt="Card Image">
+                            <div class="card-body">
+                                <h5 class="card-title">Card 3</h5>
+                                <p class="card-text">An acute oral toxicity
+                                    study of Selaginella bryopteris at doses
+                                    from 250 to 2,000 mg/kg body weight (bw) was
+                                    performed. </p>
+                                <a
+                                    href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5532467/"
+                                    class="btn btn-primary">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container mt-4">
+            <div class="row">
+                <div class="col-md-6">
+                    <form id = "form">
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" class="form-control" id="name"
+                                placeholder="Enter your name">
+                        </div>
+                        <div class="form-group">
+                            <label for="phoneNumber">Phone Number</label>
+                            <input type="number" class="form-control"
+                                id="phoneNumber"
+                                placeholder="Enter your phone Number">
+                        </div>
+                        <div class="form-group">
+                            <label for="gender">Gender</label>
+                            <select class="form-select"  id="gender" >
+                                <option value>Select Gender</option>
+                                <option value="Male">Male</option>
+                                <option value="Female">Female</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="text" onchange=" validatemail(event)" class="form-control" id="email"
+                            placeholder="Enter your email">
+                        </div>
+                        <button type="submit"  class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+
+    </body>
 </html>
